# abcq-viewer

./: .gitignore  README.md  filemodel.py  proto.bat  prototype.bat  prototype.py  watcher.py
ABCQ/: CMakeLists.txt  Main.qml  filesystemmodel.cpp  main.cpp  renderwatcher.h  replcontroller.cpp  watcher.cpp  watcher.h
ABCQ/backend/: main.cpp  replcontroller.h
ABCQ/frontend/: AnimWindow.qml  FileSystemView.qml  ResizeButton.qml  ViewerWindow.qml
ABCQ/frontend/qml/: Main.qml  MyMenu.qml
ABCQ/proto/: Colors.qml  FileSystemView.qml  Main.qml  MyMenu.qml  Sidebar.qml  WindowDragHandler.qml
ABCQ/qml/: Colors.qml  ControlButton.qml  Controls.qml  FileSystemView.qml  Light.qml  Main.qml  MyMenu.qml  MyMenuBar.qml  ResizeButton.qml  Sidebar.qml  Viewer.qml  ViewerWindow.qml  qmldir
ABCQ/qml/Themes/: qmldir
ABCQ/themes/: Dark.qml
code/: CMakeLists.txt
code/backend/: filesystemmodel.h  main.cpp  renderwatcher.cpp  replcontroller.cpp
code/frontend/: Controls.qml  Main.qml  MyMenuBar.qml  Sidebar.qml  Viewer.qml  ViewerWindow.qml  Wedward.qml
code/frontend/Themes/: Dark.qml
code/proto/: Main.qml  ViewerWindow.qml
prototype/: Main.qml  qmldir
prototype/icons/: app_icon.h
prototype/qml/: Colors.qml  ControlButton.qml  Controls.qml  FileSystemView.qml  MyMenu.qml  MyMenuBar.qml  ResizeButton.qml  Sidebar.qml  Viewer.qml  ViewerWindow.qml  qmldir
